feat: Implement core application logic, dynamic UI rendering, and styling, removing the static mobile card view from `index.html`.

--- a/index.html
+++ b/index.html
@@ -113,11 +113,6 @@
                         </tbody>
                     </table>
 
-                    <!-- Mobile Card View -->
-                    <div class="records-cards" id="transaction-list-cards">
-                        <!-- Cards will be populated here -->
-                        <p class="text-center">No transactions found.</p>
-                    </div>
                 </div>
             </section>
 
@@ -133,7 +128,7 @@
                             pattern="[A-Za-zÀ-ÿ]+( [A-Za-zÀ-ÿ]+)*" title="Please enter only letters and single spaces.">
                     </div>
 
-                    <div class="form-row"> <!-- Defined in style.css or update -->
+                    <div class="form-row">
                         <div class="form-group">
                             <label for="amount">Amount</label>
                             <input type="number" id="amount" name="amount" step="0.01" min="0" required
