feat: Introduce comprehensive UI styling for the app.

--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
                     <li><a class="nav-link" data-target="records">Records</a></li>
                     <li><a class="nav-link" data-target="add-entry">Add Entry</a></li>
                     <li><a class="nav-link" data-target="settings">Settings</a></li>
+                    <li><a class="nav-link" data-target="about">About</a></li>
                 </ul>
             </nav>
             <footer class="sidebar-footer">
@@ -272,6 +273,34 @@
                             <p>Permanently remove all your transaction data.</p>
                         </div>
                         <button id="delete-all-btn" class="btn btn-danger">Delete All</button>
+                    </div>
+                </div>
+            </section>
+
+            <!-- about page -->
+            <section id="about" class="page-section">
+                <header class="section-header">
+                    <h2>About FinanceTracker</h2>
+                </header>
+                <div class="card about-card">
+                    <div class="about-content">
+                        <h3>Purpose</h3>
+                        <p>FinanceTracker is a modern, student-focused tool designed to simplify budget management and expense tracking.</p>
+                        
+                        <hr class="separator mt-md mb-md">
+                        
+                        <h3>Developer Information</h3>
+                        <div class="developer-info">
+                            <div class="info-item">
+                                <strong>Name:</strong> <span>Ishimwe Axcel</span>
+                            </div>
+                            <div class="info-item">
+                                <strong>Email:</strong> <a href="mailto:i.axcel@alustudent.com">i.axcel@alustudent.com</a>
+                            </div>
+                            <div class="info-item">
+                                <strong>GitHub:</strong> <a href="https://github.com/iaxcel-ai" target="_blank" rel="noopener noreferrer">https://github.com/iaxcel-ai</a>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </section>
