feat: implement core finance tracker application including UI, data management, utility scripts, and comprehensive documentation.

--- a/index.html
+++ b/index.html
@@ -241,6 +241,7 @@
                             <option value="KES">KES (Ksh)</option>
                             <option value="INR">INR (₹)</option>
                             <option value="JPY">JPY (¥)</option>
+                            <option value="RWF">RWF (FRw)</option>
                         </select>
                     </div>
 
