fix: Add `href="#"` to navigation links.

--- a/index.html
+++ b/index.html
@@ -40,11 +40,11 @@
             </header>
             <nav class="sidebar-nav" aria-label="Main Navigation">
                 <ul>
-                    <li><a class="nav-link active" data-target="dashboard">Dashboard</a></li>
-                    <li><a class="nav-link" data-target="records">Records</a></li>
-                    <li><a class="nav-link" data-target="add-entry">Add Entry</a></li>
-                    <li><a class="nav-link" data-target="settings">Settings</a></li>
-                    <li><a class="nav-link" data-target="about">About</a></li>
+                    <li><a href="#" class="nav-link active" data-target="dashboard">Dashboard</a></li>
+                    <li><a href="#" class="nav-link" data-target="records">Records</a></li>
+                    <li><a href="#" class="nav-link" data-target="add-entry">Add Entry</a></li>
+                    <li><a href="#" class="nav-link" data-target="settings">Settings</a></li>
+                    <li><a href="#" class="nav-link" data-target="about">About</a></li>
                 </ul>
             </nav>
             <footer class="sidebar-footer">
